"Remove Empty Animation Data" in NLA doesn't update Outliner #89484

Closed
opened 2021-06-27 22:09:16 +02:00 by Matthew Hinson · 8 comments
Member

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: Radeon RX 580 Series ATI Technologies Inc. 4.5.13596 Core Profile Context 20.10.35.02 27.20.1034.6

Blender Version
Broken: version: 2.93.2 Release Candidate, branch: master, commit date: 2021-06-23 12:44, hash: 03d5c8b4ed
Worked: (unknown)

Short description of error
If you run the "Remove Empty Animation Data" operator in the NLA editor to clean up an object with only empty tracks, the tracks remain visible in the Outliner.

Exact steps for others to reproduce the error

  • Load the default startup scene, switch to the Animation workspace and change the Dope Sheet editor to the NLA editor.
  • With the cube selected, create two "Location X" keyframes and click "Push Down Action" in the NLA editor.
  • Expand the Cube in the Outliner to reveal the expected nodes: Animation -> NLA Tracks -> NlaTrack -> CubeAction.
  • Delete the NLA strip. The Outliner gets updated as expected.
  • Click Edit -> Remove Empty Animation Data. The Cube and its tracks disappear from the NLA editor as expected, but in the Outliner, the track remains visible and can even be selected (even though it lost its name).
  • Resize the Blender window. Only now does the Outliner get updated.
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: Radeon RX 580 Series ATI Technologies Inc. 4.5.13596 Core Profile Context 20.10.35.02 27.20.1034.6 **Blender Version** Broken: version: 2.93.2 Release Candidate, branch: master, commit date: 2021-06-23 12:44, hash: `03d5c8b4ed` Worked: (unknown) **Short description of error** If you run the "Remove Empty Animation Data" operator in the NLA editor to clean up an object with only empty tracks, the tracks remain visible in the Outliner. **Exact steps for others to reproduce the error** * Load the default startup scene, switch to the Animation workspace and change the Dope Sheet editor to the NLA editor. * With the cube selected, create two "Location X" keyframes and click "Push Down Action" in the NLA editor. * Expand the Cube in the Outliner to reveal the expected nodes: Animation -> NLA Tracks -> NlaTrack -> CubeAction. * Delete the NLA strip. The Outliner gets updated as expected. * Click Edit -> Remove Empty Animation Data. The Cube and its tracks disappear from the NLA editor as expected, but in the Outliner, the track remains visible and can even be selected (even though it lost its name). * Resize the Blender window. Only now does the Outliner get updated.
Author
Member

Added subscriber: @Matthew-Hinson

Added subscriber: @Matthew-Hinson
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm with versions 2.92 and above.

Behavior is quite odd with 2.83.17 but better we don't discuss that under this thread.

Could not find any similar ticket on tracker so marking this as confirmed

Can confirm with versions 2.92 and above. Behavior is quite odd with 2.83.17 but better we don't discuss that under this thread. Could not find any similar ticket on tracker so marking this as confirmed
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2021-06-28 10:09:14 +02:00
Member

Will check.

Will check.

This issue was referenced by 5d5cf53081

This issue was referenced by 5d5cf5308129f1632cd6e303df52dadf63026675
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
4 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#89484
No description provided.