Fix T89484: NLA "Remove Empty Animation Data" missing Outliner refresh

Similar to rBb4530deec478, just add appropriate notifier.

Maniphest Tasks: T89484

Differential Revision: https://developer.blender.org/D11724